# Zephyr-STM32-Examples

./: .gitattributes  .gitignore  CMakeLists.txt  LEARNING_JOURNEY.md  README.md  VISUAL_GUIDE.md  nucleo_g070rb.overlay  prj.conf  west.yml  zephyr
pico_script/: index.html  main.py  main_web.py
src/: main.c
src/examples/: ex_blinky.c  ex_blinky.h  ex_math.c  ex_math.h  ex_sem.c  ex_sem.h
src/led_driver/: led_driver.c  led_driver.h
src/wifi_bridge/: wifi_bridge.c  wifi_bridge.h
tools/: check_uart.sh  monitor_nucleo.py  test_led_sequence.sh  test_pattern.py  test_wifi_led.py
